--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/logo.png" />
+    <meta name="description" content="MajiUp - Clean water delivery & management for every home and business" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.png" />
     <title>Majiup</title>
   </head>
   <body>
